gccida/c1/find_splittable_givs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3163:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types unroll_type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3167:1: error: use of undeclared identifier 'induction_1'
induction_1 *i; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3167:14: error: use of undeclared identifier 'i'
induction_1 *i; // rbx 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3168:1: error: use of undeclared identifier 'induction_1'
induction_1 *j; // rbp 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3168:14: error: use of undeclared identifier 'j'
induction_1 *j; // rbp 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3169:1: error: use of undeclared identifier 'induction_1'
induction_1 *giv; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3169:14: error: use of undeclared identifier 'giv'; did you mean 'div'?
induction_1 *giv; // rbx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3182:1: error: use of undeclared identifier 'induction_1'
induction_1 *same; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3182:14: error: use of undeclared identifier 'same'
induction_1 *same; // rax 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3183:1: error: must use 'enum' tag to refer to type 'g_types'
g_types giv_type; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3185:1: error: use of undeclared identifier 'induction_1'
induction_1 *same_insn; // rdx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3185:14: error: use of undeclared identifier 'same_insn'; did you mean 'add_insn'?
induction_1 *same_insn; // rdx 
             ^~~~~~~~~
             add_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/rtl.h:1852:13: note: 'add_insn' declared here
extern void add_insn                            PARAMS ((rtx));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3199:1: error: use of undeclared identifier 'induction_1'
induction_1 *v41; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3199:14: error: use of undeclared identifier 'v41'
induction_1 *v41; // rax 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3200:4: error: expected ';' after expression
rtx new_reg; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3200:5: error: use of undeclared identifier 'new_reg'
rtx new_reg; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3205:1: error: use of undeclared identifier 'induction_1'
induction_1 *m; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3205:14: error: use of undeclared identifier 'm'
induction_1 *m; // rax 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/unroll.c:3206:1: error: use of undeclared identifier 'induction_1'
induction_1 *k; // rax 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_givs/src/obj/unroll.o] Error 1
